--- a/3_Implementation/test/Makefile
+++ b/3_Implementation/test/Makefile
@@ -2,7 +2,7 @@
 
 
 Build:
-	gcc main.c -lm test_operations.c unity/unity.c -Iunity
+	gcc main.c -lm test_operations.c ../unity/unity.c -I../unity
 
 Run:
 	./a.out
