--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -16,5 +16,5 @@ jobs:
     - name: Install Cunit
       run: sudo apt-get -y install libcunit1 libcunit1-doc libcunit1-dev 
     - name: make test
-      run:  make test -C 3_Implementation/test
+      run:  make -C 3_Implementation/test
    
